# mpspaceshooter

./: Cargo.toml  README.md  TODO.txt  build.sh  gen_bodies.py  main.js  pack.sh  precision.rs  recommendations.txt  setcap.sh  site.html
.cargo/: config
client/: emitters.json  emulator.html  filters.js  main.js  pixi.js  site.html  styles.css  wemulator.html
client/emu/: client_emu.js  package-lock.json
server/: Cargo.toml
server/client/: site.html
server/src/: game.rs  handler.rs  main.rs  ws.rs
src/: game.rs  handler.rs  main.rs  ws.rs
trajectory/: Cargo.toml  Cargo.wasm.toml
trajectory/src/: lib.rs
utils/: Cargo.toml
utils/.cargo/: config.toml
utils/src/: background.rs  envelope.rs  gameobjects.rs  lib.rs  server_gameobjects.rs  servermessage.rs  shared_gameobjects.rs  trajectory.rs
utils/tests/: native.rs  web.rs
