[package]
name = "trajectory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.179", features = ["derive"] }
wasm-bindgen = "0.2.87"

[lib]
crate-type = ["cdylib","rlib"]
