[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
bincode = "1.3.3"
js-sys = "0.3.64"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"
wasm-bindgen = "0.2.87"

[lib]
crate-type = ["cdylib","rlib"]
